# Nginx-Log-Analyzer

./: .gitignore  CMakeLists.txt  Makefile  README.md  TASK.md  __temp__.txt
lib/: CMakeLists.txt
lib/args_parser/: CMakeLists.txt  args_parser.cpp  args_parser.hpp  args_parser_messages.hpp  flag.hpp  option.hpp  parsing_result.hpp
lib/file_parser/: CMakeLists.txt  file_parser.hpp
lib/log_analyzer/: CMakeLists.txt  log_analyzer.cpp  log_analyzer.hpp  request.hpp
lib/utils/: CMakeLists.txt  colors_unicodes.hpp  datetime.hpp  logs_format_values.hpp  print_util.cpp  print_util.hpp  time_util.cpp  time_util.hpp
tests/: CMakeLists.txt  args_parser_test.cpp  log_analyzer_test.cpp  test_util.hpp  time_util_test.cpp
